# japanese-name-calculator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  name_fortune.py  pyproject.toml  sample_output.md
data/: ja_meanings_cache.json  kanji_cache.json  score_table.json  stroke_cache.json
scripts/: update_sources.py
static/: app.js  index.html  styles.css
